.deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: osrm-backend-svc
spec:
  selector:
    app: osrm-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
